--- a/css/style.css
+++ b/css/style.css
@@ -1021,6 +1021,118 @@ input[type=radio]:checked {
   z-index: 99;
 }
 
+/*** Carousel Hero Header Start ***/
+.header-carousel {
+  position: relative; 
+}
+
+.header-carousel .owl-nav .owl-prev {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  border-radius: 60px;
+  background: var(--bs-primary);
+  color: var(--bs-white);
+  font-size: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+
+.header-carousel .owl-nav .owl-next {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  border-radius: 60px;
+  background: var(--bs-primary);
+  color: var(--bs-white);
+  font-size: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+
+.header-carousel .owl-nav .owl-prev,
+.header-carousel .owl-nav .owl-next {
+  transition: 0.5s;
+}
+
+.header-carousel .owl-nav .owl-prev:hover,
+.header-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+
+@media (max-width: 576px) {
+  .header-carousel .owl-nav .owl-prev,
+  .header-carousel .owl-nav .owl-next {
+      top: 630px;
+      transition: 0.5s;
+  }
+
+  .header-carousel .header-carousel-item .carousel-caption .carousel-caption-content {
+      width: 95% !important;
+  }
+
+}
+
+.header-carousel .header-carousel-item,
+.header-carousel .header-carousel-item img {
+  position: relative;
+  width: 100%;
+  height: 700px;
+  margin-top: 95px;
+  display: block;
+  object-fit: cover;
+  transition: 0.5s;
+
+}
+
+@media (max-width: 992px) {
+  .header-carousel .header-carousel-item,
+  .header-carousel .header-carousel-item img {
+      margin-top: 0;
+      transition: 0.5s;
+  }
+
+}
+
+@media (min-width: 992px) {
+  .header-carousel .owl-nav .owl-prev,
+  .header-carousel .owl-nav .owl-next {
+      margin-top: 50px;
+  }
+}
+
+.header-carousel .header-carousel-item .carousel-caption {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 100px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, .5);
+}
+
+.header-carousel .header-carousel-item .carousel-caption .carousel-caption-content {
+  position: relative;
+  width: 75%;
+  
+}
+/*** Carousel Hero Header End ***/
+
+
 
 /*-----------------------------------*\
   #SERVICE
@@ -1864,6 +1976,53 @@ input[type=radio]:checked {
 .carousel-indicators li {
   margin: 0;
 }
+
+/*** Blog Start ***/
+.blog-carousel .owl-stage-outer {
+  margin-top: 30px;
+}
+
+.blog-carousel .owl-nav .owl-prev,
+.blog-carousel .owl-nav .owl-next {
+  position: absolute;
+  top: 1px;
+  padding: 10px 35px;
+  border: 1px solid var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-secondary);
+  border-radius: 50px;
+  transition: 0.5s;
+}
+
+.blog-carousel .owl-nav .owl-prev {
+  left: 0 !important;
+}
+
+.blog-carousel .owl-nav .owl-next {
+  right: 0;
+}
+
+.blog-carousel .owl-nav .owl-prev:hover,
+.blog-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+
+.blog .blog-item .blog-img {
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.blog .blog-item .blog-img img {
+  transition: 0.5s;
+}
+
+.blog .blog-item:hover .blog-img img {
+  transform: scale(1.3);
+}
+/*** Blog End ***/
+
 
 /* Blog Section */
 /*@media (max-width: 991px) {
