--- a/css/style.css
+++ b/css/style.css
@@ -1088,12 +1088,13 @@ input[type=radio]:checked {
 .header-carousel .header-carousel-item img {
   position: relative;
   width: 100%;
-  height: 700px;
-  margin-top: 95px;
+  height: 400px;
+  margin-top: 4pxpx;
   display: block;
   object-fit: cover;
   transition: 0.5s;
-
+  overflow: hidden;
+  z-index: 1;
 }
 
 @media (max-width: 992px) {
@@ -1101,6 +1102,9 @@ input[type=radio]:checked {
   .header-carousel .header-carousel-item img {
       margin-top: 0;
       transition: 0.5s;
+      height: 350px;
+      overflow: hidden;
+      z-index: 1;
   }
 
 }
@@ -1109,12 +1113,13 @@ input[type=radio]:checked {
   .header-carousel .owl-nav .owl-prev,
   .header-carousel .owl-nav .owl-next {
       margin-top: 50px;
+      transition: 0.5s;
   }
 }
 
 .header-carousel .header-carousel-item .carousel-caption {
   width: 100%;
-  height: 100%;
+  height: 46%;
   position: absolute;
   top: 0;
   left: 0;
@@ -1128,7 +1133,23 @@ input[type=radio]:checked {
 .header-carousel .header-carousel-item .carousel-caption .carousel-caption-content {
   position: relative;
   width: 75%;
-  
+}
+
+.header-carousel .header-carousel-item .carousel-caption .carousel-caption-content h3 {
+  font-size: 2.5rem;  
+  font-weight: 600;
+  color: var(--white);
+  transition: color 0.5s;
+}
+
+.header-carousel .header-carousel-item:hover.carousel-caption {
+  background: rgba(0, 0, 0, .8);
+}
+
+.header-carousel.header-carousel-item.carousel-caption.carousel-caption-content p {
+  font-size: 1.5rem;
+  color: var(--white);
+  transition: color 0.5s;
 }
 /*** Carousel Hero Header End ***/
 
@@ -1449,8 +1470,8 @@ input[type=radio]:checked {
 /* end get started section */
 
 
-/* Screenshots Section
-.owl-dot.active > span {
+/* Screenshots Section*/
+.owl-dot.active span {
   height: 10px !important;
   width: 10px !important;
 }
@@ -1480,9 +1501,6 @@ input[type=radio]:checked {
 .owl-theme .owl-dots .owl-dot span {
   background: #ddd;
 }
- */
-
-
 /*-- end screenshot --*/
 
 /*-- Video Section --*/
