--- a/css/style.css
+++ b/css/style.css
@@ -676,19 +676,22 @@ form .textarea textarea:focus::placeholder {
 .chat-box form .field button:active {
   transform: scale(0.97);
 }
+
 /* Chatbox End */
 
 
 /* My Modal */
-#myModal{
+#myModal {
   box-sizing: border-box;
   margin: 0;
   padding: 0px;
   transition: all 0.3s;
 }
+
 #myModal {
   scroll-behavior: smooth;
 }
+
 #myModal {
   background: #282828;
   color: #eee;
@@ -696,7 +699,8 @@ form .textarea textarea:focus::placeholder {
   background-attachment: fixed;
   position: relative;
 }
-.header-modal {
+
+#myModal .header-modal {
   background-color: #010101;
   position: fixed;
   top: 0;
@@ -710,34 +714,37 @@ form .textarea textarea:focus::placeholder {
   transition: all 1s;
   font-family: "Comfortaa", cursive;
 }
-.header-modal h2 {
+
+#myModal .header-modal h2 {
   font-size: 1.35em;
-  background: linear-gradient(
-    141.27deg,
-    #ff904e -4.24%,
-    #ff5982 21.25%,
-    #ec68f4 44.33%,
-    #79e2ff 83.46%
-  );
+  background: linear-gradient(141.27deg,
+      #ff904e -4.24%,
+      #ff5982 21.25%,
+      #ec68f4 44.33%,
+      #79e2ff 83.46%);
   background-size: 200%;
   -webkit-background-clip: text;
   background-clip: text;
   animation: gradient-heading 10s ease infinite;
   -webkit-text-fill-color: transparent;
 }
+
 .typing {
   font-size: 0.85em;
   color: chartreuse;
   display: none;
 }
+
 .suggest-chat {
   width: 2em;
   animation: chat-btn 5 15s;
 }
+
 .main-modal {
   height: 86vh;
   margin-top: 8vh;
 }
+
 .chat-msg-box {
   background-color: #616161;
   padding: 0.5em 1em;
@@ -748,22 +755,26 @@ form .textarea textarea:focus::placeholder {
   margin: 15px 0px 0px 20px;
   box-shadow: #000 2px 2px 6px;
 }
+
 .chat-msg-box:last-child {
   margin-bottom: 15vh;
 }
+
 .chat-msg-box.clint {
   background-color: blueviolet;
   float: right;
   margin: 15px 20px 0px 0px;
 }
-.main-background {
+
+.main-modal {
   position: fixed;
   top: 42vh;
   text-align: center;
   width: 100vw;
   z-index: -1;
 }
-.main-background div {
+
+.main-modal div {
   width: auto;
   border: 2px solid #3f3f3f;
   margin: auto;
@@ -774,21 +785,26 @@ form .textarea textarea:focus::placeholder {
   box-shadow: inset #000 0 0 4px 1px;
   color: #757575;
 }
-.main-background div h3 {
+
+.main-modal div h3 {
   margin-bottom: 0.5em;
 }
-.main-background div p {
+
+.main-modal div p {
   font-size: 14px;
 }
+
 .all-questions h2 {
   padding: 10vh 0 2vh 0;
   font-family: "Dosis", sans-serif;
   text-align: center;
   color: orange;
 }
+
 .all-questions {
   display: none;
 }
+
 .questions .container {
   display: flex;
   flex-direction: column;
@@ -796,9 +812,11 @@ form .textarea textarea:focus::placeholder {
   align-content: center;
   justify-content: space-around;
 }
+
 .questions.container h2 {
   padding-top: 3.7em;
 }
+
 .question {
   background-color: #616161;
   margin: 0.4em 0.8em;
@@ -808,15 +826,18 @@ form .textarea textarea:focus::placeholder {
   font-size: 14px;
   background: linear-gradient(223deg, #616161, #454545);
 }
+
 .question:hover {
   background: blueviolet;
 }
+
 .question p::selection {
   background-color: chocolate;
   color: black;
   user-select: all;
   -webkit-user-select: all;
 }
+
 .footer-modal {
   background-color: #282828;
   position: fixed;
@@ -828,6 +849,7 @@ form .textarea textarea:focus::placeholder {
   box-shadow: #000 -2px 0 4px 1px;
   padding: 0px 3vw;
 }
+
 .chat-input {
   width: 82vw;
   height: 2.5em;
@@ -837,37 +859,46 @@ form .textarea textarea:focus::placeholder {
   padding-left: 0.5em;
   color: #dbdbdb;
 }
+
 .chat-input::placeholder {
   color: #9f9f9f;
 }
+
 .chat-input:focus {
   outline: none;
   border-color: chartreuse;
 }
+
 .chat-input:invalid {
   border-color: orangered;
 }
+
 #chat-form {
   display: flex;
   align-items: center;
 }
+
 .chat-submit {
   width: 10vw;
   background: transparent;
   border: 0;
 }
+
 .chat-submit svg {
   fill: orange;
 }
+
 .chat-submit svg:hover {
   fill: chartreuse;
 }
+
 .spinner {
   margin: 2px auto 0;
   width: 70px;
   text-align: center;
 }
-.spinner > div {
+
+.spinner>div {
   width: 14px;
   height: 14px;
   background-color: #eee;
@@ -876,72 +907,88 @@ form .textarea textarea:focus::placeholder {
   -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
   animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
+
 .spinner .bounce1 {
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
+
 .spinner .bounce2 {
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
 }
+
 @media screen and (min-width: 680px) {
   .questions.container {
     flex-direction: row;
     flex-wrap: wrap;
   }
+
   .question {
     width: 31vw;
   }
+
   .question:hover {
     transform: scale(1.1);
   }
 }
+
 @media screen and (max-width: 680px) {
   .header-modal p {
     font-size: 14px;
   }
+
   .chat-input {
     font-size: 14px;
   }
 }
+
 @keyframes gradient-heading {
   0% {
     background-position: 0 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   to {
     background-position: 0 50%;
   }
 }
+
 @keyframes sk-bouncedelay {
+
   0%,
   80%,
   100% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
+
   40% {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
+
 @keyframes chat-btn {
+
   0%,
   30%,
   85% {
     transform: rotateY(0deg);
   }
+
   33%,
   80% {
     transform: rotateY(180deg);
   }
-} 
+}
 
 /* Header */
 #header {
-  position:absolute;
+  position: absolute;
   left: 0;
   top: 0;
   right: 0;
@@ -950,7 +997,7 @@ form .textarea textarea:focus::placeholder {
 }
 
 /* Hero Section */
-#header  {
+#header {
   width: 100%;
   height: calc(100vh - 40px);
   background-size: 100%;
@@ -984,9 +1031,13 @@ form .textarea textarea:focus::placeholder {
   #SERVICE
 \*-----------------------------------*/
 
-.service { text-align: center; }
+.service {
+  text-align: center;
+}
 
-.service .section-title { margin-block-end: 50px; }
+.service .section-title {
+  margin-block-end: 50px;
+}
 
 .service-card {
   padding: 40px;
@@ -1006,9 +1057,13 @@ form .textarea textarea:focus::placeholder {
   margin-inline: auto;
 }
 
-.service-card .card-icon ion-icon { --ionicon-stroke-width: 50px; }
+.service-card .card-icon ion-icon {
+  --ionicon-stroke-width: 50px;
+}
 
-.service-card .card-title { margin-block: 16px 10px; }
+.service-card .card-title {
+  margin-block: 16px 10px;
+}
 
 .service-card .btn-text {
   display: flex;
@@ -1021,7 +1076,9 @@ form .textarea textarea:focus::placeholder {
   transition: var(--transition-1);
 }
 
-.service-card .btn-text:is(:hover, :focus-visible) { opacity: 0.9; }
+.service-card .btn-text:is(:hover, :focus-visible) {
+  opacity: 0.9;
+}
 
 
 
@@ -1036,9 +1093,13 @@ form .textarea textarea:focus::placeholder {
   gap: 50px;
 }
 
-.about .section-title { margin-block-end: 35px; }
+.about .section-title {
+  margin-block-end: 35px;
+}
 
-.accordion-card .card-title { padding-block-end: 20px; }
+.accordion-card .card-title {
+  padding-block-end: 20px;
+}
 
 .accordion-btn {
   display: flex;
@@ -1056,10 +1117,14 @@ form .textarea textarea:focus::placeholder {
   transform: rotate(0.5turn);
 }
 
-.accordion-btn .span { transition: var(--transition-1); }
+.accordion-btn .span {
+  transition: var(--transition-1);
+}
 
 .accordion-btn:is(:hover, :focus-visible) .span,
-.accordion-card.expanded .accordion-btn .span { color: var(--violet-blue-crayola); }
+.accordion-card.expanded .accordion-btn .span {
+  color: var(--violet-blue-crayola);
+}
 
 .accordion-content {
   padding-inline-start: 24px;
@@ -1085,7 +1150,9 @@ form .textarea textarea:focus::placeholder {
   gap: 50px;
 }
 
-.feature .section-text { margin-block: 25px 30px; }
+.feature .section-text {
+  margin-block: 25px 30px;
+}
 
 .feature-list {
   display: grid;
@@ -1105,7 +1172,9 @@ form .textarea textarea:focus::placeholder {
   border-radius: var(--radius-circle);
 }
 
-.feature-card .card-icon ion-icon { --ionicon-stroke-width: 40px; }
+.feature-card .card-icon ion-icon {
+  --ionicon-stroke-width: 40px;
+}
 
 
 
@@ -1115,7 +1184,9 @@ form .textarea textarea:focus::placeholder {
   #STATS
 \*-----------------------------------*/
 
-.stats { background-image: linear-gradient(to bottom, var(--white) 50%, var(--cultured) 50%); }
+.stats {
+  background-image: linear-gradient(to bottom, var(--white) 50%, var(--cultured) 50%);
+}
 
 .stats-card {
   display: grid;
@@ -1126,7 +1197,9 @@ form .textarea textarea:focus::placeholder {
   border-radius: var(--radius-8);
 }
 
-.stats-card .card-text > * { color: var(--white); }
+.stats-card .card-text>* {
+  color: var(--white);
+}
 
 
 
@@ -1136,11 +1209,17 @@ form .textarea textarea:focus::placeholder {
   #PROJECT
 \*-----------------------------------*/
 
-.project { background-color: var(--cultured); }
+.project {
+  background-color: var(--cultured);
+}
 
-.project :is(.section-subtitle, .section-title) { text-align: center; }
+.project :is(.section-subtitle, .section-title) {
+  text-align: center;
+}
 
-.project .section-title { margin-block-end: 50px; }
+.project .section-title {
+  margin-block-end: 50px;
+}
 
 .project-card {
   background-color: var(--white);
@@ -1150,13 +1229,21 @@ form .textarea textarea:focus::placeholder {
   height: 100%;
 }
 
-.project-card .card-content { padding: 30px; }
+.project-card .card-content {
+  padding: 30px;
+}
 
-.project-card .card-title { transition: var(--transition-1); }
+.project-card .card-title {
+  transition: var(--transition-1);
+}
 
-.project-card .card-title:is(:hover, :focus-visible) { color: var(--violet-blue-crayola); }
+.project-card .card-title:is(:hover, :focus-visible) {
+  color: var(--violet-blue-crayola);
+}
 
-.project-card .card-text { margin-block: 16px 20px; }
+.project-card .card-text {
+  margin-block: 16px 20px;
+}
 
 .project-card .card-meta-list {
   display: flex;
@@ -1319,13 +1406,15 @@ form .textarea textarea:focus::placeholder {
   margin-top: 10px;
 }
 
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
   background: #f68122;
 }
 
 .owl-theme .owl-dots .owl-dot span {
   background: #ddd;
 }
+
 /*-- end screenshot --*/
 
 /*-- Video Section --*/
@@ -1864,6 +1953,7 @@ form .textarea textarea:focus::placeholder {
 .blog .blog-item:hover .blog-img img {
   transform: scale(1.3);
 }
+
 /*** Blog End ***/
 
 
