--- a/css/style.css
+++ b/css/style.css
@@ -986,25 +986,6 @@ form .textarea textarea:focus::placeholder {
   }
 }
 
-/* Header */
-#header {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  height: 48px;
-  transition: all 0.5s ease;
-}
-
-/* Hero Section */
-#header {
-  width: 100%;
-  height: calc(100vh - 40px);
-  background-size: 100%;
-  position: relative;
-  margin-top: 40px;
-}
-
 /* Navbar-brand */
 .navbar-brand {
   margin: 0;
@@ -1025,6 +1006,40 @@ form .textarea textarea:focus::placeholder {
   display: block;
   top: 4px;
   z-index: 99;
+}
+
+.carousel-inner {
+  width: 100vw;
+  height: 100vh;
+}
+
+.carousel-inner .carousel-item {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-inner .carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-item::before {
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(180deg, #fff 0%, black 100%);
+  z-index: 1;
+  mix-blend-mode: multiply;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  z-index: 2;
 }
 
 /*-----------------------------------*\
