--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,18 @@ label i.fas {
   transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
+.wrapper #myModal {
+  position: fixed;
+  right: 30px;
+  bottom: 0px;
+  max-width: 400px;
+  border-radius: 15px;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
 #click:checked~.wrapper {
   opacity: 1;
   bottom: 85px;
@@ -622,8 +634,8 @@ label i.fas {
 form .field input,
 form .field button,
 form .textarea textarea {
-  width: 100%;
-  height: 100%;
+  width: 45%;
+  height: 60%;
   padding-left: 20px;
   border: 1px solid #444;
   outline: none;
@@ -704,7 +716,7 @@ form .textarea textarea:focus::placeholder {
   background-color: #010101;
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 45vw;
   height: 3.7em;
   display: flex;
   align-items: center;
@@ -712,7 +724,6 @@ form .textarea textarea:focus::placeholder {
   box-shadow: #000 2px 0 4px;
   justify-content: space-around;
   transition: all 1s;
-  font-family: "Comfortaa", cursive;
 }
 
 #myModal .header-modal h2 {
@@ -919,7 +930,7 @@ form .textarea textarea:focus::placeholder {
 }
 
 @media screen and (min-width: 680px) {
-  .questions.container {
+  .questions .container {
     flex-direction: row;
     flex-wrap: wrap;
   }
@@ -1017,6 +1028,7 @@ form .textarea textarea:focus::placeholder {
   left: 0;
   right: 0;
   width: auto;
+  z-index: 100;
 }
 
 .carousel-indicators,
