--- a/css/style.css
+++ b/css/style.css
@@ -1019,6 +1019,64 @@ form .textarea textarea:focus::placeholder {
   z-index: 99;
 }
 
+.carousel-indicators [data-bs-target] {
+  width: 30px;
+  height: 10px;
+  background-color: #fff;
+  transition: all 0.5s ease;
+  border-radius: 15px;
+}
+
+.carousel-indicators button.active {
+  width: 60px;
+  border-radius: 10px;
+}
+
+.card {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  position: relative;
+}
+
+.card::before {
+width: 100%;
+height: 100%;
+content: "";
+position: absolute;
+inset: 0;
+background: linear-gradient(180deg, #fff 0%, black 100%);
+z-index: 1;
+mix-blend-mode: multiply;
+}
+
+.card-body {
+  position: absolute;
+  z-index: 3;
+}
+
+.headlines a {
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.5s ease;
+}
+
+.headlines a:hover {
+  text-decoration: underline;
+}
+
+.icons{
+  display: flex;
+  justify-content: center;
+  gap: 1.5em;
+}
+
+.icons .icon {
+  display: flex;
+  gap: 0.3em;
+}
+
 /* Indicator */
 
 .carousel-indicators {
